; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/flexfilelayout/extr_flexfilelayoutdev.c_ff_rw_layout_has_available_ds.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/flexfilelayout/extr_flexfilelayoutdev.c_ff_rw_layout_has_available_ds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pnfs_layout_segment = type { i32 }
%struct.nfs4_ff_layout_mirror = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.nfs4_deviceid_node }
%struct.nfs4_deviceid_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pnfs_layout_segment*)* @ff_rw_layout_has_available_ds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ff_rw_layout_has_available_ds(%struct.pnfs_layout_segment* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pnfs_layout_segment*, align 8
  %4 = alloca %struct.nfs4_ff_layout_mirror*, align 8
  %5 = alloca %struct.nfs4_deviceid_node*, align 8
  %6 = alloca i64, align 8
  store %struct.pnfs_layout_segment* %0, %struct.pnfs_layout_segment** %3, align 8
  store i64 0, i64* %6, align 8
  br label %7

7:                                                ; preds = %41, %1
  %8 = load i64, i64* %6, align 8
  %9 = load %struct.pnfs_layout_segment*, %struct.pnfs_layout_segment** %3, align 8
  %10 = call i64 @FF_LAYOUT_MIRROR_COUNT(%struct.pnfs_layout_segment* %9)
  %11 = icmp slt i64 %8, %10
  br i1 %11, label %12, label %44

12:                                               ; preds = %7
  %13 = load %struct.pnfs_layout_segment*, %struct.pnfs_layout_segment** %3, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call %struct.nfs4_ff_layout_mirror* @FF_LAYOUT_COMP(%struct.pnfs_layout_segment* %13, i64 %14)
  store %struct.nfs4_ff_layout_mirror* %15, %struct.nfs4_ff_layout_mirror** %4, align 8
  %16 = load %struct.nfs4_ff_layout_mirror*, %struct.nfs4_ff_layout_mirror** %4, align 8
  %17 = icmp ne %struct.nfs4_ff_layout_mirror* %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %12
  %19 = load %struct.nfs4_ff_layout_mirror*, %struct.nfs4_ff_layout_mirror** %4, align 8
  %20 = getelementptr inbounds %struct.nfs4_ff_layout_mirror, %struct.nfs4_ff_layout_mirror* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = call i64 @IS_ERR(%struct.TYPE_2__* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %18, %12
  store i32 0, i32* %2, align 4
  br label %49

25:                                               ; preds = %18
  %26 = load %struct.nfs4_ff_layout_mirror*, %struct.nfs4_ff_layout_mirror** %4, align 8
  %27 = getelementptr inbounds %struct.nfs4_ff_layout_mirror, %struct.nfs4_ff_layout_mirror* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = icmp ne %struct.TYPE_2__* %28, null
  br i1 %29, label %31, label %30

30:                                               ; preds = %25
  br label %41

31:                                               ; preds = %25
  %32 = load %struct.nfs4_ff_layout_mirror*, %struct.nfs4_ff_layout_mirror** %4, align 8
  %33 = getelementptr inbounds %struct.nfs4_ff_layout_mirror, %struct.nfs4_ff_layout_mirror* %32, i32 0, i32 0
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  store %struct.nfs4_deviceid_node* %35, %struct.nfs4_deviceid_node** %5, align 8
  %36 = load %struct.nfs4_deviceid_node*, %struct.nfs4_deviceid_node** %5, align 8
  %37 = call i64 @nfs4_test_deviceid_unavailable(%struct.nfs4_deviceid_node* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %31
  store i32 0, i32* %2, align 4
  br label %49

40:                                               ; preds = %31
  br label %41

41:                                               ; preds = %40, %30
  %42 = load i64, i64* %6, align 8
  %43 = add nsw i64 %42, 1
  store i64 %43, i64* %6, align 8
  br label %7

44:                                               ; preds = %7
  %45 = load %struct.pnfs_layout_segment*, %struct.pnfs_layout_segment** %3, align 8
  %46 = call i64 @FF_LAYOUT_MIRROR_COUNT(%struct.pnfs_layout_segment* %45)
  %47 = icmp ne i64 %46, 0
  %48 = zext i1 %47 to i32
  store i32 %48, i32* %2, align 4
  br label %49

49:                                               ; preds = %44, %39, %24
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i64 @FF_LAYOUT_MIRROR_COUNT(%struct.pnfs_layout_segment*) #1

declare dso_local %struct.nfs4_ff_layout_mirror* @FF_LAYOUT_COMP(%struct.pnfs_layout_segment*, i64) #1

declare dso_local i64 @IS_ERR(%struct.TYPE_2__*) #1

declare dso_local i64 @nfs4_test_deviceid_unavailable(%struct.nfs4_deviceid_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
